--- a/Blogs/blogs.html
+++ b/Blogs/blogs.html
@@ -3,8 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=di, initial-scale=1.0" />
 
+    <!-- Favicon start -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/imgs/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/imgs/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/imgs/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/imgs/favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="/imgs/favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <link rel="shortcut icon" href="/imgs/favicon/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta
+      name="msapplication-config"
+      content="/imgs/favicon/browserconfig.xml"
+    />
+    <meta name="theme-color" content="#ffffff" />
+    <!-- Favicon end -->
     <!-- Font family -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -94,8 +126,8 @@
         class="navbar navbar-expand-lg justify-content-between fixed-top bg-nav"
       >
         <div class="container">
-          <a href="../index.html" class="navbar-brand">
-            <img src="../imgs/hugoIcon.png" alt="" />
+          <a href="/index.html" class="navbar-brand">
+            <img src="/imgs/hugoIcon.png" alt="" />
           </a>
           <p class="text-white text-uppercase mb-0 icon-text">
             hugo english club <br /><span class="text-white"
@@ -139,7 +171,9 @@
                 </div>
                 <ul class="dropdown-menu teams-elements">
                   <li>
-                    <a class="dropdown-item text-white teams-name" href="#"
+                    <a
+                      class="dropdown-item text-white teams-name"
+                      href="./Teams/teams_PR.html"
                       >POWER RANGERS</a
                     >
                   </li>
@@ -147,7 +181,9 @@
                     <hr class="dropdown-divider bg-white m-0" />
                   </li>
                   <li>
-                    <a class="dropdown-item text-white teams-name" href="#"
+                    <a
+                      class="dropdown-item text-white teams-name"
+                      href="./Teams/teams_HC.html"
                       >HEROES COMPANY</a
                     >
                   </li>
@@ -155,7 +191,9 @@
                     <hr class="dropdown-divider bg-white m-0" />
                   </li>
                   <li>
-                    <a class="dropdown-item text-white teams-name" href="#"
+                    <a
+                      class="dropdown-item text-white teams-name"
+                      href="./Teams/teams_BNN.html"
                       >BANANA</a
                     >
                   </li>
@@ -163,7 +201,9 @@
                     <hr class="dropdown-divider bg-white m-0" />
                   </li>
                   <li>
-                    <a class="dropdown-item text-white teams-name" href="#"
+                    <a
+                      class="dropdown-item text-white teams-name"
+                      href="./Teams/teams_NF.html"
                       >NIFFLER</a
                     >
                   </li>
@@ -198,41 +238,37 @@
               <li class="nav-item nav-element">
                 <a
                   class="nav-link text-white nav-blogs"
-                  href="../Blogs/blogs.html"
+                  href="./Blogs/blogs.html"
                   >BLOGS</a
                 >
               </li>
               <li class="nav-item nav-element">
-                <a class="nav-link text-white" href="../AboutUs/aboutUs.html"
+                <a class="nav-link text-white" href="./AboutUs/aboutUs.html"
                   >ABOUT US</a
                 >
               </li>
             </ul>
-            <form class="search" role="search">
-              <input
-                class=""
-                type=""
-                placeholder="What do you want to search?"
-                aria-label=""
-              />
-              <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
-            </form>
+            <a
+              target="blank"
+              href="https://www.google.com/"
+              class="text-uppercase text-decoration-none join-us-button"
+              >join us</a
+            >
           </div>
         </div>
       </nav>
     </div>
-    <link rel="stylesheet" href="../header.css" />
-    <script src="./slider.js" type="text/babel"></script>
+    <link rel="stylesheet" href="/header.css" />
     <!-- Header end -->
     <link rel="stylesheet" href="./blogs.css" />
-
+    <div class="blog-main-pic"></div>
     <!-- Hugo blog start -->
     <div class="hugo-blog mt-5 d-flex">
       <div class="container d-flex justify-content-between align-items-center">
         <span class="hugo-blog-title text-uppercase"> hugo's blog </span>
-        <div class="view-all text-uppercase d-flex align-items-center">
+        <!-- <div class="view-all text-uppercase d-flex align-items-center">
           view all
-        </div>
+        </div> -->
       </div>
     </div>
 
@@ -249,9 +285,9 @@
       <div class="container">
         <div class="d-flex justify-content-between align-items-center">
           <span class="hugo-blog-title text-uppercase"> hugo's academic </span>
-          <div class="view-all text-uppercase d-flex align-items-center">
+          <!-- <div class="view-all text-uppercase d-flex align-items-center">
             view all
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -295,7 +331,8 @@
                 This website is a product of Hugo IT club and part of the
                 HUGOVERSARY project to celebrate the 15th birthday of Hugo
                 English Club. This website is to store, update and promote the
-                activities and events of Hugo Club up to the present time.
+                activities and events of Hugo English Club up to the present
+                time.
               </p>
             </div>
           </div>
