--- a/meeting/meeting.html
+++ b/meeting/meeting.html
@@ -117,9 +117,10 @@
     <!-- JSZip start -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <!-- JSZip end -->
-    <link rel="stylesheet" href="./aboutUs.css" />
   </head>
+
   <body>
+    <!-- Header start -->
     <div class="header" id="header">
       <nav
         class="navbar navbar-expand-lg justify-content-between fixed-top bg-nav"
@@ -154,7 +155,7 @@
                 <a
                   class="nav-link active text-white nav-home"
                   aria-current="page"
-                  href="#"
+                  href="/index.html"
                   >HOME</a
                 >
               </li>
@@ -220,7 +221,9 @@
                 </div>
                 <ul class="dropdown-menu mt-0 activities-elements">
                   <li>
-                    <a class="dropdown-item text-white activities-name" href="#"
+                    <a
+                      class="dropdown-item text-white activities-name"
+                      href="/meeting/meeting.html"
                       >MEETINGS</a
                     >
                   </li>
@@ -228,7 +231,9 @@
                     <hr class="dropdown-divider bg-white m-0" />
                   </li>
                   <li>
-                    <a class="dropdown-item text-white activities-name" href="#"
+                    <a
+                      class="dropdown-item text-white activities-name"
+                      href="/meeting/event.html"
                       >EVENTS</a
                     >
                   </li>
@@ -259,73 +264,29 @@
     </div>
     <link rel="stylesheet" href="/header.css" />
     <!-- Header end -->
-    <div id="about-introduction" class="about-introduction">
-      <div class="container">
-        <p class="about-introduction-title">
-          Our club built base on <br />
-          LEARN, DEVELOP <br />
-          and JOY
-        </p>
-        <span class="about-introduction-content row col-7"
-          >Hugo English Club was established in March 2008 by DUT students, with
-          the motto of practicing English in dynamic, fun, and interesting ways.
-          Besides, Hugo members not only come from DUT but also come from
-          different universities and colleges in Da Nang, which can give us a
-          lot of opportunities to make new friends. In addition, Hugo also
-          organizes extra-curricular activities such as events, competitions,
-          collaboration programs with other clubs, and charity
-          activities,…</span
-        >
-      </div>
-      <img src="./aboutImg/about-mainpic.png" alt="" class="img-fluid" />
-    </div>
-    <div class="container">
-      <div class="mt-5 about-human text-center">
-        <span class="about-human-title">GET TO KNOW <br /> </span>
-        <span class="about-human-title-sub mb-5">HUGO’S HUMAN</span>
-        <div class="line mt-3"></div>
-        <div class="about-human-description row justify-content-center">
-          <p class="col-6 mt-3">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-            vulputate libero et velit interdum, ac aliquet odio mattis. Class
-            aptent taciti sociosqu ad litora torquent per conubia nostra, per
-            inceptos himenaeos. Curabitur tempus urna at turpis condimentum
-            lobortis.
-          </p>
-        </div>
-        <div id="staffArea" class="row about-member mt-4"></div>
-      </div>
-      <div class="hugo-in-us">
-        <div class="hugo-in-us-line"></div>
-        <div
-          class="hugo-in-us-title row text-uppercase text-center justify-content-center"
-        >
-          hugo in us
-        </div>
-        <p class="hugo-in-us-sub text-center m-0">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        </p>
-      </div>
-      <div class="hugo-in-us-content row mt-3">
-        <div id="hugo-in-us-area" class="owl-carousel owl-theme">
-          <div class="item p-3 d-flex flex-column align-items-center">
-            <img src="../Teams/teams-img/HC/recent_ac1.png" alt="" class="" />
-            <p class="mem-name mb-0">Tran Quy The</p>
-            <p class="mem-team text-uppercase">BANANA team</p>
-            <p class="mem-description px-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Imperdiet
-              habitant arcu felis enim eget ultricies elit at auctor. Ultrices
-              quis condimentum eget eu, ultrices nisl. Ac tempus odio sit at.
-              Netus aliquam aliquet tincidunt mauris gravida. Nulla quam nulla
-              fames id. Nibh posuere mi arcu at lorem. Purus eleifend at massa
-              eget vitae enim feugiat porta enim. Nunc nunc id quam faucibus ut.
-            </p>
-            <div class="read_more d-flex justify-content-center">read more</div>
-          </div>
-        </div>
+
+    <!-- Poster start -->
+    <div class="header-pic" id="header-pic">
+      <div class="team-text-content text-align-center">
+        <p class="text-uppercase team-name">heroes company</p>
+        <p class="team-name-slogan">“Stronger Together.”</p>
       </div>
     </div>
-    <script src="/AboutUs/abouUs.js" type="text/babel"></script>
+    <!-- Poster end -->
+
+    <!-- Team meeting start -->
+    <div class="container team_meeting">
+      <div class="team_meeting_title text-uppercase">meetings</div>
+      <div id="team-meeting" class="row justify-content-around"></div>
+    </div>
+    <div class="team_meeting_see_more d-flex justify-content-center">
+      <a class="" href="../index.html">SEE MORE</a>
+    </div>
+
+    <link rel="stylesheet" href="../meeting/meeting.css" />
+    <script src="./meeting.js" type="text/babel"></script>
+    <!-- Team meeting end  -->
+
     <!-- Footer start -->
     <div class="footer text-white" id="footer">
       <div class="container w-100 mt-5 h-auto p-md-0">
